--- a/src/Pages/LoginRegister.css
+++ b/src/Pages/LoginRegister.css
@@ -97,3 +97,23 @@
       padding: 2rem;
     }
   }
+
+  .password-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+  }
+  
+  .password-container input {
+    width: 100%;
+    padding-right: 40px; /* Space for eye icon */
+  }
+  
+  .toggle-password {
+    position: absolute;
+    right: 10px;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: #555;
+  }
+  
